Since the register has a mechanism to make the selected item visible remove the external viewport vertical scroll position setting mechanism from kgloballedgerview since the two mechanisms conflicted with each other causing this bug. This was the code is also simplified and we can assume that scrollTo does not change the viewport's position if the item is visible.

BUG: 269622